# file_dublicats_founder

./: CMakeLists.txt  CustomRollingHash.cpp  CustomRollingHash.h  README.md  cmd_options_helper.cpp  cmd_options_helper.h  cmd_options_parser.cpp  cmd_options_parser.h  dir_reader.cpp  dir_reader.h  dir_treat.cpp  dir_treat.h  file_info.cpp  file_info.h  file_list_filter.cpp  file_list_filter.h  main.cpp  sha1.h  sha2.cpp  sha2.h
.github/workflows/: main.yml
